# book-crossing-filtering-recommendations

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Untitled-1.ipynb  filtering-recommendations.ipynb
